# rfd

./: .editorconifg  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  app.exe.manifest  build.rs  deny.toml  manifest.rc
.github/workflows/: cargo-deny.yml  changelog.yml  rust.yml
examples/: async.rs  builder.rs  filter.rs  msg-custom-buttons.rs  msg.rs  multiple.rs  pick_file.rs  pick_file_filter.rs  pick_folder.rs  pick_multiple.rs  rust.rs  save.rs  show_hidden.rs  simple.rs  test.rs  winit.rs
examples/message-custom-buttons/: Cargo.toml  app.exe.manifest  build.rs
examples/message-custom-buttons/src/: main.rs
examples/wasm-example/: Cargo.toml  build.sh
examples/wasm-example/src/: main.rs
examples/web-trunk/: Cargo.toml  README.md  index.html
examples/web-trunk/src/: main.rs
examples/winit-example/: .gitignore  Cargo.toml  Trunk.toml  index.html  wasm-build.sh
examples/winit-example/src/: main.rs
src/: backend.rs  dialog.rs  file_dialog.rs  file_handle.rs  gtk3.rs  lib.rs  macos.rs  main.rs  message_dialog.rs  oneshot.rs  wasm.rs  win_vista.rs  win_xp.rs  windows.rs  windows_cid.rs  windows_ofn.rs
src/backend/: gtk3.rs  gtk4.rs  macos.rs  wasm.rs  web_fallback.rs  win_cid.rs  win_vista.rs  win_xp.rs.old  xdg_desktop_portal.rs
src/backend/gtk3/: async_dialog.rs  dialog_future.rs  file_dialog.rs  gtk_dialog.rs  gtk_future.rs  gtk_guard.rs  message_dialog.rs  utils.rs
src/backend/gtk3/file_dialog/: dialog_async.rs  dialog_ffi.rs
src/backend/linux/: async_command.rs  child_stdout.rs  mod.rs  zenity.rs
src/backend/macos/: async_dialog.rs  file_dialog.rs  focus_manager.rs  message_dialog.rs  modal_future.rs  panel.rs  utils.rs
src/backend/macos/file_dialog/: dialog_async.rs  dialog_ffi.rs  panel_ffi.rs
src/backend/macos/utils/: application.rs  focus_manager.rs  policy_manager.rs  url.rs  user_alert.rs  window.rs
src/backend/wasm/: file_dialog.rs  style.css
src/backend/win_cid/: async_dialog.rs  file_dialog.rs  message_dialog.rs  thread_future.rs  util.rs  utils.rs  win_dialog.rs
src/backend/win_cid/file_dialog/: com.rs  dialog_async.rs  dialog_ffi.rs  dialog_future.rs
src/backend/xdg_desktop_portal/portal/: ffi.rs  file_dialog.rs  libdbus.rs  mod.rs
src/backend/xdg_desktop_portal/window_identifier/: LICENSE  mod.rs  wayland.rs
src/backend/xdg_desktop_portal/window_identifier/wayland/: ffi.rs  raw.rs
src/backend/xdg_impl/: error.rs  file_path.rs  mod.rs
src/backend/xdg_impl/desktop/: file_chooser.rs  mod.rs  request.rs
src/backend/xdg_impl/window_identifier/: mod.rs  wayland.rs
src/file_handle/: mod.rs  native.rs  web.rs
src/macos_reference_implementation/: enums.rs  mod.rs  select.rs
src/macos_reference_implementation/foundation/: array.rs  data.rs  dictionary.rs  number.rs  string.rs
