[package]
edition = "2021"
name = "rfd"
version = "0.10.0"

authors = ["Poly <marynczak.bartlomiej@gmail.com>"]
description = "Rusty File Dialog"
documentation = "https://docs.rs/rfd"
keywords = ["file", "ui", "dialog"]
license = "MIT"
repository = "https://github.com/PolyMeilex/rfd"

[features]
common-controls-v6 = ["windows/Win32_UI_Controls"]
default = ["xdg-portal*"]
file-handle-inner = []
gtk3 = ["gtk-sys", "glib-sys", "gobject-sys"]
xdg-portal = ["ashpd", "urlencoding", "pollster"]

[dev-dependencies]
futures = "0.3.12"

[dependencies]
log = "0.4"
raw-window-handle = "0.5"

[target.'cfg(target_os = "macos")'.dependencies]
block = "0.1.6"
dispatch = "0.2.0"
objc = "0.2.7"
objc-foundation = "0.1.1"
objc_id = "0.1.1"

[target.'cfg(target_os = "windows")'.dependencies]
windows = {version = "0.44", features = [
  "Win32_Foundation",
  "Win32_System_Com",
  "Win32_UI_Shell_Common",
  "Win32_UI_Shell",
  "Win32_UI_WindowsAndMessaging",
]}

[target.'cfg(any(target_os = "linux", target_os = "freebsd", target_os = "dragonfly", target_os = "netbsd", target_os = "openbsd"))'.dependencies]
# XDG Desktop Portal
ashpd = {version = "0.3", optional = true}
pollster = {version = "0.2", optional = true}
urlencoding = {version = "2.1.0", optional = true}
# GTK
glib-sys = {version = "0.16.3", optional = true}
gobject-sys = {version = "0.16.3", optional = true}
gtk-sys = {version = "0.16.0", features = ["v3_24"], optional = true}

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3.46"
wasm-bindgen = "0.2.69"
wasm-bindgen-futures = "0.4.19"
web-sys = {version = "0.3.46", features = [
  'Document',
  'Element',
  'HtmlInputElement',
  'HtmlButtonElement',
  'Window',
  'File',
  'FileList',
  'FileReader',
]}

[[example]]
name = "simple"
[[example]]
name = "async"

[package.metadata.docs.rs]
features = ["file-handle-inner"]
