[package]
name = "message-custom-buttons"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rfd = {version = "0.9.0", path = "../..", features=["common-controls-v6"]}

[build-dependencies]
embed-resource = "1.6"
