[package]
name = "wasm-example"
version = "0.1.0"
authors = ["Poly <marynczak.bartlomiej@gmail.com>"]
edition = "2018"

[dependencies]
rfd={path="../../"}

wasm-bindgen="0.2.69"
web-sys={version="0.3.46",features = [
  'Document',
  'Window',
]}

wasm-bindgen-futures = "0.4.19"
winit = "0.27" 
futures = {version="0.3.10",features=["thread-pool"]}
